--- a/src/styles/employee_home.module.css
+++ b/src/styles/employee_home.module.css
@@ -369,6 +369,19 @@
   border-radius: 16px;
 }
 
+.announceImageContainer {
+  display: flex;
+  gap: 8px;
+  flex-shrink: 0;
+}
+
+@media (max-width: 640px) {
+  .announceImageContainer {
+    flex-direction: column;
+  }
+}
+
+
 .announceThumbnail {
   width: 100%;
   height: 100%;
